<resources>
    <string name="app_name">Morris</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="nine_men_s_morris_contact_us">موریس یا همان Nine men\'s morris که در بین ما ایرانی ها به دوز ۹ تایی هم شناخته میشه بازی سرگرم کننده ایه که توسط تیم
        <b>ایکس توسعه پیدا کرده اگه دوست داری باهامون درارتباط باش :)</b></string>
</resources>
