<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.amk.morris.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.amk.morris.ui.rating.RatingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.amk.morris.ui.edit.EditFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.amk.morris.ui.contact_us.ContactFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.amk.morris.ui.settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.amk.morris.ui.history.HistoryFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_history" />



</navigation>